correct text-align of information in MainPlayerPage

--- a/src/Layout/Components/ProfileCard/ProfileCard.css
+++ b/src/Layout/Components/ProfileCard/ProfileCard.css
@@ -103,29 +103,31 @@ p {
     color:aliceblue;
 }
 
-table {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.player-info-table {
     width: 100%;
-    height: 280px;
+    margin: auto;
     border-collapse: collapse;
+    text-align: right;
 }
 
-td {
-
+.player-info-table td {
     padding: 10px;
-    border: none;
-    border-radius: 20px;
-    color: white;
+    border-radius: 10px;
 }
 
-td:first-child {
+.player-info-table .label {
     font-weight: bold;
     text-shadow: 0px 3px 0px #FBAE54;
     color: #333333;
+    width: 50%;
 }
+
+.player-info-table .value {
+    color: white;
+    text-align: right;
+    width: 50%;
+}
+
 .credit a {
     text-decoration: none;
     color: #fff;
